# BullSwap

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
benches/: solver_bench.rs
migrations/: 001_create_tokens.sql  002_create_batches.sql  003_create_orders.sql  004_create_solvers.sql  005_create_settlements.sql  006_create_trades.sql
postman/: BullSwap_API.postman_collection.json
src/: config.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/api/: middleware.rs  mod.rs  routes_batches.rs  routes_health.rs  routes_orders.rs  routes_settlements.rs  routes_tokens.rs
src/db/: batch_repo.rs  mod.rs  order_repo.rs  pool.rs  settlement_repo.rs  solver_repo.rs  token_repo.rs
src/domain/: batch.rs  mod.rs  order.rs  settlement.rs  solver.rs  token.rs
src/services/: batch_service.rs  mod.rs  order_service.rs  settlement_service.rs
src/solver/: competition.rs  cow_finder.rs  engine.rs  mev_protection.rs  mod.rs  naive_solver.rs  optimizer.rs  surplus.rs
src/tasks/: batch_timer.rs  mod.rs
tests/: solver_competition_test.rs  solver_cow_test.rs
tests/common/: mod.rs
