[package]
name = "bullswap"
version = "0.1.0"
edition = "2021"
authors = ["BullSwap Team"]
description = "A batch auction-based decentralized exchange aggregator inspired by CoW Protocol"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"

# Configuration
dotenvy = "0.15"

# Parallelism
rayon = "1"

# Crypto / Hashing
sha2 = "0.10"
hex = "0.4"

# Rate limiting
actix-governor = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "solver_bench"
harness = false
